--- a/.github/workflows/run-unit-tests.yaml
+++ b/.github/workflows/run-unit-tests.yaml
@@ -14,7 +14,7 @@ jobs:
 
       # Execute unit tests
       - name: Unit Test
-        run: ./app/src/test/java/com.cse110.team7.socialcompass/US1StoryTest
+        run: ./gradlew testDebugUnitTest
 
       # Report the results
       - name: Android Test report
