--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,7 +17,10 @@
         android:theme="@style/Theme.SocialCompass"
         tools:targetApi="31">
         <activity
-            android:name="com.cse110.team7.socialcompass.CompassActivity"
+            android:name=".AddFriendActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CompassActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
