--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,10 @@ dependencies {
     testImplementation 'androidx.test:core:1.5.0'
     testImplementation 'androidx.test.ext:junit:1.1.5'
 
+    testImplementation 'androidx.arch.core:core-common:2.2.0'
+    testImplementation 'androidx.arch.core:core-runtime:2.2.0'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test:rules:1.5.0'
